# Darwin

./: .dockerignore  CMakeLists.txt  Docker.md  Dockerfile  README.md
.github/workflow/: docker-build.yml
.github/workflows/: cmake-multi-platform.yml  darwin-AutoDeployTrigger-02c42f7d-d0ed-4fd1-98ce-c2f7926d4e4b.yml  docker-build.yml  github-actions-Docker.yml
Client/: input_acquisition.cpp  state_play.cpp
Common/: darwin_service.pb.h  darwin_service.proto
Server/: world_db.json  world_state.cpp
